--- a/app/src/main/res/layout/fragment_list_following.xml
+++ b/app/src/main/res/layout/fragment_list_following.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvFollowerList"
+                android:id="@+id/rvFollowingList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
