--- a/app/src/main/res/xml/collapsing_toolbar.xml
+++ b/app/src/main/res/xml/collapsing_toolbar.xml
@@ -15,7 +15,7 @@
 
     <ConstraintSet android:id="@+id/expanded">
         <Constraint
-            android:id="@id/toolbar_image"
+            android:id="@id/imageHeader"
             android:layout_height="300dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,13 +32,13 @@
             android:layout_marginBottom="24dp"
             android:scaleX="1.0"
             android:scaleY="1.0"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar_image"
+            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
             app:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/collapsed">
         <Constraint
-            android:id="@id/toolbar_image"
+            android:id="@id/imageHeader"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,13 +51,13 @@
             android:id="@id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/marginM"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="0dp"
-            android:scaleX="0.6"
-            android:scaleY="0.6"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar_image"
+            android:scaleX="0.625"
+            android:scaleY="0.625"
+            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/toolbar_image" />
+            app:layout_constraintTop_toTopOf="@id/imageHeader"></Constraint>
 
     </ConstraintSet>
 
