--- a/app/src/main/res/layout/fragment_list_following.xml
+++ b/app/src/main/res/layout/fragment_list_following.xml
@@ -12,10 +12,9 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -29,8 +28,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:spanCount="2"
-                tools:listitem="@layout/item_github_user"
-                tools:visibility="gone" />
+                tools:itemCount="3"
+                tools:listitem="@layout/item_github_user" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textInfo"
@@ -55,9 +54,9 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible" />
+                tools:visibility="gone" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
