--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#CB202D</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparentWhite">#30555555</color>
+    <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorBlue">#0099ff</color>
     <color name="colorGreyLight4">#CCCCCC</color>
