--- a/app/src/main/res/xml/collapsing_toolbar.xml
+++ b/app/src/main/res/xml/collapsing_toolbar.xml
@@ -16,7 +16,7 @@
     <ConstraintSet android:id="@+id/expanded">
         <Constraint
             android:id="@id/imageHeader"
-            android:layout_height="300dp"
+            android:layout_height="250dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -25,7 +25,30 @@
                 app:customIntegerValue="255" />
         </Constraint>
         <Constraint
-            android:id="@id/title"
+            android:id="@id/viewOverlay"
+            android:layout_height="250dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                app:attributeName="imageAlpha"
+                app:customIntegerValue="255" />
+        </Constraint>
+
+        <!-- SECTION USER INFO -->
+        <Constraint
+            android:id="@id/imageUser"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="@dimen/marginM"
+            android:layout_marginBottom="@dimen/marginM"
+            android:scaleX="1.0"
+            android:scaleY="1.0"
+            app:layout_constraintBottom_toTopOf="@id/textFullName"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Constraint
+            android:id="@id/textFullName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -47,17 +70,41 @@
                 app:attributeName="imageAlpha"
                 app:customIntegerValue="0" />
         </Constraint>
+
         <Constraint
-            android:id="@id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="0dp"
-            android:scaleX="0.625"
-            android:scaleY="0.625"
+            android:id="@id/viewOverlay"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                app:attributeName="imageAlpha"
+                app:customIntegerValue="255" />
+        </Constraint>
+
+        <Constraint
+            android:id="@id/imageUser"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="@dimen/marginXL"
+            android:layout_marginTop="@dimen/marginSM"
+            android:layout_marginBottom="@dimen/marginM"
+            android:scaleX="0.5"
+            android:scaleY="0.5"
             app:layout_constraintBottom_toBottomOf="@id/imageHeader"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/imageHeader"></Constraint>
+            app:layout_constraintTop_toTopOf="@id/imageHeader" />
+
+        <Constraint
+            android:id="@id/textFullName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="0.625"
+            android:scaleY="0.625"
+            android:translationX="-36dp"
+            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
+            app:layout_constraintStart_toEndOf="@id/imageUser"
+            app:layout_constraintTop_toTopOf="@id/imageHeader" />
 
     </ConstraintSet>
 
