--- a/app/src/main/res/layout/fragment_list_following.xml
+++ b/app/src/main/res/layout/fragment_list_following.xml
@@ -35,22 +35,22 @@
                 android:id="@+id/textInfo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/detail_user_empty_follower_following"
+                android:layout_marginTop="@dimen/marginXXXL"
+                android:gravity="center_horizontal"
+                android:text="@string/detail_user_empty_following"
                 android:textSize="@dimen/fontXXL"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <ProgressBar
                 android:id="@+id/progressLoading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/marginXXXL"
                 android:indeterminate="true"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
