--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -283,9 +283,21 @@
                         android:textColor="@color/colorWhite"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/buttonFav"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="@tools:sample/full_names" />
+
+                    <com.varunest.sparkbutton.SparkButton
+                        android:id="@+id/buttonFav"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:sparkbutton_activeImage="@drawable/ic_favorite_red"
+                        app:sparkbutton_iconSize="20dp"
+                        app:sparkbutton_inActiveImage="@drawable/ic_love_red_outline"
+                        app:sparkbutton_primaryColor="@color/colorPrimary"
+                        app:sparkbutton_secondaryColor="@color/spark_secondary_color" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
